fix form overflow

--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -26,3 +26,8 @@
   margin: 0px;
   padding: 0px;
 }
+
+.form-controls {
+  margin: 0px;
+  padding: 0px;
+}
